fix (element-selector.component): The tree selection panel was too small when there are only a few nodes available.

--- a/src/style/layout/_tree.scss
+++ b/src/style/layout/_tree.scss
@@ -151,6 +151,7 @@ div.mat-tab-label {
   background-color:#FFF;
   width:100%;
   z-index: 900;
+  min-height: 200px;
 }
 
 
